--- a/Segundo_MD.ipynb
+++ b/Segundo_MD.ipynb
@@ -70,9 +70,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "088384a9-c4cb-4193-ba7c-691349adc3a0",
+   "metadata": {},
+   "source": [
+    "![logo](./img/descarga.svg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb555935-2394-4a5e-8c81-7a87f21efbc3",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "```Python\n",
+    "print(\"Hola Mundo\")\n",
+    "```\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce559e26-f828-4a0f-b1eb-89f32e26b50c",
+   "id": "48520023-fe85-446c-8225-4247f0220a5d",
    "metadata": {},
    "outputs": [],
    "source": []
