--- a/Parte_5_Píldora_1_Jupyter_DS_01_02_01_N01_V01.ipynb
+++ b/Parte_5_Píldora_1_Jupyter_DS_01_02_01_N01_V01.ipynb
@@ -101,13 +101,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "uLVDzreRzOT4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Marzo\n"
+          ]
+        }
+      ],
       "source": [
-        "months = [\"Enero\", \"Febrero\", \"Marzo\"]"
+        "months = [\"Enero\", \"Febrero\", \"Marzo\"]\n",
+        "print (months[-1])"
       ]
     },
     {
@@ -121,13 +130,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "h44JTyb6zOT5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n"
+          ]
+        }
+      ],
       "source": [
-        "months = [\"Enero\", \"Febrero\", \"Marzo\", \"Marzo\"]"
+        "months = [\"Enero\", \"Febrero\", \"Marzo\", \"Marzo\"]\n",
+        "print (months.index(\"Febrero\"))"
       ]
     },
     {
@@ -141,13 +159,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "1m8tOckszOT5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[15, 26, 18, 22]\n",
+            "[15, 26, 18, 22]\n"
+          ]
+        }
+      ],
       "source": [
-        "degrees = [22, 34, 15, 26, 18, 22]"
+        "degrees = [22, 34, 15, 26, 18, 22]\n",
+        "print (degrees[-4:])\n",
+        "print (degrees[2:])"
       ]
     },
     {
@@ -188,14 +217,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "Hwl0laEOzOT6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['ducati', 'honda', 'yamaha', 'suzuki', 'aprilia']\n"
+          ]
+        }
+      ],
       "source": [
         "# Con append lo añadimos al final de la lista\n",
-        "motorcycles = ['honda', 'yamaha', 'suzuki']"
+        "motorcycles = ['honda', 'yamaha', 'suzuki']\n",
+        "motorcycles.append(\"aprilia\")\n",
+        "motorcycles.insert(0,\"ducati\")\n",
+        "print(motorcycles)"
       ]
     },
     {
@@ -236,14 +276,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "YyMn5muAzOT7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['VW', 'BMW', 'VW']\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "'VW'"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Eliminar elementos por indice, y guarda ese valor en una variable\n",
-        "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]"
+        "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]\n",
+        "cars.remove(\"Seat\")\n",
+        "print (cars)\n",
+        "cars.pop(0)"
       ]
     },
     {
@@ -352,8 +413,11 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -367,10 +431,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
